  * Don't copy keyboard-configuration questions to /target in OEM mode, and
    reset any values that come from the live filesystem build.  oem-config
    will ask them later, and copying these confuses it (LP: #741304).
  * GTK frontend:
    - Avoid a crash if the automatic partitioning page is never displayed.

  [ Evan Dandrea ]
  * Remove the 'Bootloader device' line.  See LP #726740.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 13 Apr 2011 10:08:02 +0100

ubiquity (2.6.5) natty; urgency=low

  * Fix broken home directory lookup (LP: #759401).

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 13 Apr 2011 09:17:48 +0100

ubiquity (2.6.4) natty; urgency=low

  * Don't check for debconf database locks when ubiquity is itself running
    inside a debconf frontend (LP: #758858).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Apr 2011 21:25:47 +0100

ubiquity (2.6.3) natty; urgency=low

  * Clean up after the langpacks state on multiple runs of the installer.
  * Prefer biggest_free over resize always now that we make sure the
    biggest_free choice offers at least 5GB (LP: #758236, LP: #652852).
  * Determine the home directory of the target user when copying the
    network configuration (LP: 745607).
  * Select all the ubiquity slideshow packages for removal, and do not
    error out if none can be found (LP: #745607).
  * Update translations from Launchpad.
  * Automatic update of included source packages: console-setup
    1.57ubuntu18, migration-assistant 0.6.10.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 12 Apr 2011 18:29:53 +0100

ubiquity (2.6.2) natty; urgency=low

  [ Colin Watson ]
  * Handle keyboard layouts with only one variant (LP: #711926).
  * Make sure to set a new variant default when changing keyboard layout
    (LP: #745137).

  [ Evan Dandrea ]
  * Deal with the confirmation key being translated in jockey-text
    (LP: #757208).
  * Update translations from Launchpad.

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 11 Apr 2011 17:51:12 +0100
