@@ -13,6 +13,9 @@ ubiquity (2.6.6) UNRELEASED; urgency=low
   [ Evan Dandrea ]
   * Remove the 'Bootloader device' line.  See LP #726740.
 
+  [ Mario Limonciello ]
+  * Show the oem-config slideshow in oem-config rather than the ubuntu one.
+
  -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 13 Apr 2011 10:08:02 +0100
 
 ubiquity (2.6.5) natty; urgency=low
